--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.button{
+  padding: 10px;
 }
+
 
 @keyframes App-logo-spin {
   from {
