--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.header{
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #282c34;
+}
+.header-item{
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.searchField{
+  margin-left: 20px;
+}
+.movies{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.movie-item{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 280px;
+  cursor: pointer;
+}
+.movie-item-image{
+  height: 350px;
+}
+.movie-detail{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+}
+.movie-detail-details{
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 280px;
+  justify-content: center;
+  cursor: pointer;
+}
+.movie-detail-image{
+  height: 450px;
+}
+h2{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.sign-out{
+  float: right;
+}
